// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exclude asset exclude all 1`] = `[]`;

exports[`exclude asset exclude some 1`] = `
[
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 0,
              "downloadTime": 92.41606059827302,
              "initialDownloadTime": 92.41606059827302,
            },
            "before": {
              "asyncDownloadTime": 0,
              "downloadTime": 39.41184596011514,
              "initialDownloadTime": 39.41184596011514,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": {
                "absolute": 53.00421463815788,
                "ok": false,
                "percent": 134.48802852776356,
              },
              "initialDownloadTime": {
                "absolute": 53.00421463815788,
                "ok": true,
                "percent": 134.48802852776356,
              },
            },
            "entry": "one",
            "rule": {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download time diff of assets is 53 ms (134.49%). It's over the 1 ms limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 262.551558645148,
              "initialDownloadTime": 250.7059197676809,
            },
            "before": {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 181.23827482524672,
              "initialDownloadTime": 178.54790938527958,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 9.1552734375,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "downloadTime": {
                "absolute": 81.3132838199013,
                "ok": false,
                "percent": 44.86540378863408,
              },
              "initialDownloadTime": {
                "absolute": 72.15801038240133,
                "ok": true,
                "percent": 40.41380861351627,
              },
            },
            "entry": "two",
            "rule": {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download time diff of assets is 81 ms (44.87%). It's over the 1 ms limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncDownloadTimeDiff global 1`] = `
[
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 276.5053196957237,
              "initialDownloadTime": 264.65968081825656,
            },
            "before": {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 181.23827482524672,
              "initialDownloadTime": 178.54790938527958,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 9.1552734375,
                "ok": false,
                "percent": 340.2985074626866,
              },
              "downloadTime": {
                "absolute": 95.26704487047698,
                "ok": true,
                "percent": 52.56452863631329,
              },
              "initialDownloadTime": {
                "absolute": 86.11177143297698,
                "ok": true,
                "percent": 48.228944113347595,
              },
            },
            "entry": "two",
            "rule": {
              "maxAsyncDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download time diff of async assets is 9 ms (340.30%). It's over the 1 ms limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncDownloadTimeDiff not match - global 1`] = `[]`;

exports[`maxAsyncDownloadTimeDiff not match - override global 1`] = `[]`;

exports[`maxAsyncDownloadTimeDiff override global 1`] = `
[
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 276.5053196957237,
              "initialDownloadTime": 264.65968081825656,
            },
            "before": {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 181.23827482524672,
              "initialDownloadTime": 178.54790938527958,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 9.1552734375,
                "ok": false,
                "percent": 340.2985074626866,
              },
              "downloadTime": {
                "absolute": 95.26704487047698,
                "ok": true,
                "percent": 52.56452863631329,
              },
              "initialDownloadTime": {
                "absolute": 86.11177143297698,
                "ok": true,
                "percent": 48.228944113347595,
              },
            },
            "entry": "two",
            "rule": {
              "maxAsyncDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download time diff of async assets is 9 ms (340.30%). It's over the 1 ms limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncDownloadTimeDiff with useCompressedSize = false 1`] = `
[
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 24.09282483552632,
              "downloadTime": 664.1588712993422,
              "initialDownloadTime": 640.0660464638158,
            },
            "before": {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 260.061966745477,
              "initialDownloadTime": 257.210982473273,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 21.24184056332237,
                "ok": false,
                "percent": 745.0704225352114,
              },
              "downloadTime": {
                "absolute": 404.0969045538652,
                "ok": true,
                "percent": 155.38485292982324,
              },
              "initialDownloadTime": {
                "absolute": 382.8550639905428,
                "ok": true,
                "percent": 148.84864569510577,
              },
            },
            "entry": "two",
            "rule": {
              "maxAsyncDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download time diff of async assets is 21 ms (745.07%). It's over the 1 ms limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTimeDiff global 1`] = `
[
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 0,
              "downloadTime": 106.36982164884868,
              "initialDownloadTime": 106.36982164884868,
            },
            "before": {
              "asyncDownloadTime": 0,
              "downloadTime": 39.41184596011514,
              "initialDownloadTime": 39.41184596011514,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": {
                "absolute": 66.95797568873354,
                "ok": false,
                "percent": 169.89302088639832,
              },
              "initialDownloadTime": {
                "absolute": 66.95797568873354,
                "ok": true,
                "percent": 169.89302088639832,
              },
            },
            "entry": "one",
            "rule": {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download time diff of assets is 67 ms (169.89%). It's over the 1 ms limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 276.5053196957237,
              "initialDownloadTime": 264.65968081825656,
            },
            "before": {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 181.23827482524672,
              "initialDownloadTime": 178.54790938527958,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 9.1552734375,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "downloadTime": {
                "absolute": 95.26704487047698,
                "ok": false,
                "percent": 52.56452863631329,
              },
              "initialDownloadTime": {
                "absolute": 86.11177143297698,
                "ok": true,
                "percent": 48.228944113347595,
              },
            },
            "entry": "two",
            "rule": {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download time diff of assets is 95 ms (52.56%). It's over the 1 ms limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTimeDiff not match - global 1`] = `[]`;

exports[`maxDownloadTimeDiff not match - override global 1`] = `[]`;

exports[`maxDownloadTimeDiff override global 1`] = `
[
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 0,
              "downloadTime": 106.36982164884868,
              "initialDownloadTime": 106.36982164884868,
            },
            "before": {
              "asyncDownloadTime": 0,
              "downloadTime": 39.41184596011514,
              "initialDownloadTime": 39.41184596011514,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": {
                "absolute": 66.95797568873354,
                "ok": false,
                "percent": 169.89302088639832,
              },
              "initialDownloadTime": {
                "absolute": 66.95797568873354,
                "ok": true,
                "percent": 169.89302088639832,
              },
            },
            "entry": "one",
            "rule": {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download time diff of assets is 67 ms (169.89%). It's over the 1 ms limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 276.5053196957237,
              "initialDownloadTime": 264.65968081825656,
            },
            "before": {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 181.23827482524672,
              "initialDownloadTime": 178.54790938527958,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 9.1552734375,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "downloadTime": {
                "absolute": 95.26704487047698,
                "ok": false,
                "percent": 52.56452863631329,
              },
              "initialDownloadTime": {
                "absolute": 86.11177143297698,
                "ok": true,
                "percent": 48.228944113347595,
              },
            },
            "entry": "two",
            "rule": {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download time diff of assets is 95 ms (52.56%). It's over the 1 ms limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTimeDiff with useCompressedSize = false 1`] = `
[
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 0,
              "downloadTime": 398.7964830900493,
              "initialDownloadTime": 398.7964830900493,
            },
            "before": {
              "asyncDownloadTime": 0,
              "downloadTime": 70.79275030838816,
              "initialDownloadTime": 70.79275030838816,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": {
                "absolute": 328.00373278166114,
                "ok": false,
                "percent": 463.3295519001701,
              },
              "initialDownloadTime": {
                "absolute": 328.00373278166114,
                "ok": true,
                "percent": 463.3295519001701,
              },
            },
            "entry": "one",
            "rule": {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download time diff of assets is 328 ms (463.33%). It's over the 1 ms limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 24.09282483552632,
              "downloadTime": 664.1588712993422,
              "initialDownloadTime": 640.0660464638158,
            },
            "before": {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 260.061966745477,
              "initialDownloadTime": 257.210982473273,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 21.24184056332237,
                "ok": true,
                "percent": 745.0704225352114,
              },
              "downloadTime": {
                "absolute": 404.0969045538652,
                "ok": false,
                "percent": 155.38485292982324,
              },
              "initialDownloadTime": {
                "absolute": 382.8550639905428,
                "ok": true,
                "percent": 148.84864569510577,
              },
            },
            "entry": "two",
            "rule": {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download time diff of assets is 404 ms (155.38%). It's over the 1 ms limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialDownloadTimeDiff global 1`] = `
[
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 0,
              "downloadTime": 106.36982164884868,
              "initialDownloadTime": 106.36982164884868,
            },
            "before": {
              "asyncDownloadTime": 0,
              "downloadTime": 39.41184596011514,
              "initialDownloadTime": 39.41184596011514,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": {
                "absolute": 66.95797568873354,
                "ok": true,
                "percent": 169.89302088639832,
              },
              "initialDownloadTime": {
                "absolute": 66.95797568873354,
                "ok": false,
                "percent": 169.89302088639832,
              },
            },
            "entry": "one",
            "rule": {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download time diff of initial assets is 67 ms (169.89%). It's over the 1 ms limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 276.5053196957237,
              "initialDownloadTime": 264.65968081825656,
            },
            "before": {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 181.23827482524672,
              "initialDownloadTime": 178.54790938527958,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 9.1552734375,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "downloadTime": {
                "absolute": 95.26704487047698,
                "ok": true,
                "percent": 52.56452863631329,
              },
              "initialDownloadTime": {
                "absolute": 86.11177143297698,
                "ok": false,
                "percent": 48.228944113347595,
              },
            },
            "entry": "two",
            "rule": {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download time diff of initial assets is 86 ms (48.23%). It's over the 1 ms limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialDownloadTimeDiff not match - global 1`] = `[]`;

exports[`maxInitialDownloadTimeDiff not match - override global 1`] = `[]`;

exports[`maxInitialDownloadTimeDiff override global 1`] = `
[
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 0,
              "downloadTime": 106.36982164884868,
              "initialDownloadTime": 106.36982164884868,
            },
            "before": {
              "asyncDownloadTime": 0,
              "downloadTime": 39.41184596011514,
              "initialDownloadTime": 39.41184596011514,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": {
                "absolute": 66.95797568873354,
                "ok": true,
                "percent": 169.89302088639832,
              },
              "initialDownloadTime": {
                "absolute": 66.95797568873354,
                "ok": false,
                "percent": 169.89302088639832,
              },
            },
            "entry": "one",
            "rule": {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download time diff of initial assets is 67 ms (169.89%). It's over the 1 ms limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 276.5053196957237,
              "initialDownloadTime": 264.65968081825656,
            },
            "before": {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 181.23827482524672,
              "initialDownloadTime": 178.54790938527958,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 9.1552734375,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "downloadTime": {
                "absolute": 95.26704487047698,
                "ok": true,
                "percent": 52.56452863631329,
              },
              "initialDownloadTime": {
                "absolute": 86.11177143297698,
                "ok": false,
                "percent": 48.228944113347595,
              },
            },
            "entry": "two",
            "rule": {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download time diff of initial assets is 86 ms (48.23%). It's over the 1 ms limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialDownloadTimeDiff with useCompressedSize = false 1`] = `
[
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 0,
              "downloadTime": 398.7964830900493,
              "initialDownloadTime": 398.7964830900493,
            },
            "before": {
              "asyncDownloadTime": 0,
              "downloadTime": 70.79275030838816,
              "initialDownloadTime": 70.79275030838816,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": {
                "absolute": 328.00373278166114,
                "ok": true,
                "percent": 463.3295519001701,
              },
              "initialDownloadTime": {
                "absolute": 328.00373278166114,
                "ok": false,
                "percent": 463.3295519001701,
              },
            },
            "entry": "one",
            "rule": {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download time diff of initial assets is 328 ms (463.33%). It's over the 1 ms limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "ccac20dc279ee29ab60e",
    "details": [
      {
        "payload": {
          "context": {
            "after": {
              "asyncDownloadTime": 24.09282483552632,
              "downloadTime": 664.1588712993422,
              "initialDownloadTime": 640.0660464638158,
            },
            "before": {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 260.061966745477,
              "initialDownloadTime": 257.210982473273,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": {
              "asyncDownloadTime": {
                "absolute": 21.24184056332237,
                "ok": true,
                "percent": 745.0704225352114,
              },
              "downloadTime": {
                "absolute": 404.0969045538652,
                "ok": true,
                "percent": 155.38485292982324,
              },
              "initialDownloadTime": {
                "absolute": 382.8550639905428,
                "ok": false,
                "percent": 148.84864569510577,
              },
            },
            "entry": "two",
            "rule": {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download time diff of initial assets is 383 ms (148.85%). It's over the 1 ms limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;
